--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Don Juan</title>
+    <title>Don Juan </title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="https://w7.pngwing.com/pngs/802/361/png-transparent-bakery-bread-logo-pretzel-cafe-logo-idea-food-label-cake.png">
@@ -45,6 +45,8 @@
 </head>
 
 <body>
+    <!--<h1>{{anio}}</h1>-->
+    <app-navbar></app-navbar>
     <app-root></app-root>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 </body>
